<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/s_bg"
    tools:context=".Narra">

    <TextView
        android:id="@+id/content_narra"
        android:layout_width="245dp"
        android:layout_height="139dp"
        android:text="@string/known_as_the_national_tree_of_the_philippines_narra_is_a_majestic_reddish_hardwood_tree_reflecting_the_same_resiliency_and_strength_as_that_of_the_filipino_people_historically_on_june_21_1969_the_municipality_of_narra_was_created_by_virtue_of_republic_act_no_5642_signed_by_president_ferdinand_marcos_having_a_title_as_quot_the_rice_granary_of_palawan_quot_municipality_of_narra_is_the_main_rice_producer_of_the_province_of_palawan_additionally_narra_is_a_graceful_tree_with_drooping_branches_that_toss_in_the_trade_winds_short_lived_flowers_usually_appear_in_april_or_may_and_for_a_day_or_two_the_tree_is_a_shimmering_mass_of_fragrant_yellow_blooms_which_then_fall_off_nearly_all_at_once"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.898" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="215dp"
        android:layout_height="32dp"
        android:text="@string/symbol_of"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.525" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="215dp"
        android:layout_height="32dp"
        android:text="@string/lofty_ideals_of_filipino"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.579" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="215dp"
        android:layout_height="32dp"
        android:text="@string/history_and_background"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.674" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="162dp"
        android:layout_height="169dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.072"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/name_Narra"
        android:layout_width="170dp"
        android:layout_height="54dp"
        android:text="@string/narra"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.377" />
</androidx.constraintlayout.widget.ConstraintLayout>